--- a/build-arch/PKGBUILD
+++ b/build-arch/PKGBUILD
@@ -2,7 +2,7 @@
 
 _gitname="rst2arb"
 pkgname=rst2arb
-pkgver=0.14.16
+pkgver=0.16.a2fabbc
 pkgrel=1
 pkgdesc="Convert ReST to article, report and beamer."
 license=('GPL')
@@ -11,6 +11,7 @@ depends=('pandoc' 'python')
 optdepends=('texlive-langchinese: for Chinese texts support'
             'texlive-langjapanese: for Japanese texts support'
             'texlive-langkorean: for  Korean texts support')
+makedepends=('git' 'texlive-core')
 url='https://github.com/shmilee/rst2arb'
 source=("git://github.com/shmilee/${_gitname}.git"
         "git+https://github.com/jrnold/beamercolorthemesolarized.git"
@@ -20,7 +21,7 @@ md5sums=('SKIP' 'SKIP' 'SKIP')
 
 pkgver() {
   cd "$srcdir/$_gitname"
-  echo -n "0.14.$(git rev-list --count HEAD)."
+  echo -n "0.$(git rev-list --count HEAD)."
   git describe --always|sed 's|-|.|g'
 }
 prepare() {
