update template for pandoc 2.16.2

--- a/rst2arb.conf
+++ b/rst2arb.conf
@@ -12,7 +12,7 @@ other_options = ["-N",
                  "-V mainfont:'Times New Roman'",
                  "-V sansfont:Verdana",
                  "-V monofont:Monaco",
-                 "-V xeCJK:CJKspace=true,CJKmath=true,xCJKecglue=true,CheckSingle=true,PlainEquation=true,PunctStyle=CCT",
+                 "-V xeCJK:CJKspace=true,CheckSingle=true,PlainEquation=true,PunctStyle=CCT",
                  "-V ctex:UTF8,heading=true",
                  "-V CJKmainfont:SimSun",
                  "-V CJKmainfontoptions:BoldFont=SimHei,ItalicFont=KaiTi,AutoFakeSlant,FallBack='WenQuanYi Micro Hei'",
@@ -32,7 +32,7 @@ other_options = ["-N",
                  "-V mainfont:'Times New Roman'",
                  "-V sansfont:Verdana",
                  "-V monofont:Monaco",
-                 "-V xeCJK:CJKspace=true,CJKmath=true,xCJKecglue=true,CheckSingle=true,PlainEquation=true,PunctStyle=CCT",
+                 "-V xeCJK:CJKspace=true,CheckSingle=true,PlainEquation=true,PunctStyle=CCT",
                  "-V ctex:UTF8,heading=true",
                  "-V CJKmainfont:SimSun",
                  "-V CJKmainfontoptions:BoldFont=SimHei,ItalicFont=KaiTi,AutoFakeSlant,FallBack='WenQuanYi Micro Hei'",
@@ -45,14 +45,14 @@ other_options = ["-N",
 [beamer]
 alias_name    = b
 doc_class     = beamer
-template      = ./beamer-cjk.tex
+template      = ./latex-cjk.tex
 latex_engine  = xelatex
 other_options = ["-V colortheme:default",
                  "-V theme:default",
                  "-V mainfont:'Times New Roman'",
                  "-V sansfont:Verdana",
                  "-V monofont:Monaco",
-                 "-V xeCJK:CJKspace=true,CJKmath=true,xCJKecglue=true,CheckSingle=true,PlainEquation=true,PunctStyle=CCT",
+                 "-V xeCJK:CJKspace=true,CheckSingle=true,PlainEquation=true,PunctStyle=CCT",
                  "-V ctex:UTF8,heading=true",
                  "-V CJKmainfont:SimSun",
                  "-V CJKmainfontoptions:BoldFont=SimHei,ItalicFont=KaiTi,AutoFakeSlant,FallBack='WenQuanYi Micro Hei'",
