add new template: eisvogel

--- a/rst2arb.conf
+++ b/rst2arb.conf
@@ -9,6 +9,7 @@ template      = ./latex-cjk.tex
 latex_engine  = xelatex
 other_options = ["-N",
                  "--toc",
+                 "--highlight-style kate",
                  "-V mainfont:'Times New Roman'",
                  "-V sansfont:Verdana",
                  "-V monofont:Monaco",
@@ -29,6 +30,7 @@ template      = ./latex-cjk.tex
 latex_engine  = xelatex
 other_options = ["-N",
                  "--toc",
+                 "--highlight-style kate",
                  "-V mainfont:'Times New Roman'",
                  "-V sansfont:Verdana",
                  "-V monofont:Monaco",
@@ -61,3 +63,23 @@ other_options = ["-V colortheme:default",
                  "-V CJKmonofont:'WenQuanYi Micro Hei Mono'",
                  "-V CJKmonofontoptions:AutoFakeBold,AutoFakeSlant,FallBack='WenQuanYi Zen Hei Mono'"]
 
+[article-eisvogel]
+alias_name    = ae
+doc_class     = article
+template      = ./eisvogel-v2.4.0.tex
+latex_engine  = xelatex
+other_options = ["-N",
+                 "--toc",
+                 "--listings",
+                 "-V mainfont:'Times New Roman'",
+                 "-V sansfont:Verdana",
+                 "-V monofont:Monaco",
+                 "-V xeCJK:CJKspace=true,CheckSingle=true,PlainEquation=true,PunctStyle=CCT",
+                 "-V ctex:UTF8",
+                 "-V CJKmainfont:SimSun",
+                 "-V CJKmainfontoptions:BoldFont=SimHei,ItalicFont=KaiTi,AutoFakeSlant,FallBack='WenQuanYi Micro Hei'",
+                 "-V CJKsansfont:SimHei",
+                 "-V CJKsansfontoptions:AutoFakeBold,AutoFakeSlant,FallBack='Microsoft YaHei'",
+                 "-V CJKmonofont:'WenQuanYi Micro Hei Mono'",
+                 "-V CJKmonofontoptions:AutoFakeBold,AutoFakeSlant,FallBack='WenQuanYi Zen Hei Mono'",
+                 "-V geometry:left=2cm,right=2cm,top=2.5cm,bottom=2.5cm"]
