--- a/rst2arb.conf
+++ b/rst2arb.conf
@@ -9,12 +9,13 @@ template      = ./latex-cjk.tex
 latex_engine  = xelatex
 other_options = ["-N",
                  "--toc",
+                 "-V colorlinks", "-V indent",
                  "--highlight-style kate",
                  "-V mainfont:'Times New Roman'",
                  "-V sansfont:Verdana",
                  "-V monofont:Monaco",
                  "-V xeCJK:CJKspace=true,CheckSingle=true,PlainEquation=true,PunctStyle=CCT",
-                 "-V ctex:UTF8,heading=true",
+                 "-V ctex:UTF8",
                  "-V CJKmainfont:SimSun",
                  "-V CJKmainfontoptions:BoldFont=SimHei,ItalicFont=KaiTi,AutoFakeSlant,FallBack='WenQuanYi Micro Hei'",
                  "-V CJKsansfont:SimHei",
@@ -30,6 +31,7 @@ template      = ./latex-cjk.tex
 latex_engine  = xelatex
 other_options = ["-N",
                  "--toc",
+                 "-V colorlinks", "-V indent",
                  "--highlight-style kate",
                  "-V mainfont:'Times New Roman'",
                  "-V sansfont:Verdana",
@@ -41,8 +43,7 @@ other_options = ["-N",
                  "-V CJKsansfont:SimHei",
                  "-V CJKsansfontoptions:AutoFakeBold,AutoFakeSlant,FallBack='Microsoft YaHei'",
                  "-V CJKmonofont:'WenQuanYi Micro Hei Mono'",
-                 "-V CJKmonofontoptions:AutoFakeBold,AutoFakeSlant,FallBack='WenQuanYi Zen Hei Mono'",
-                 "-V geometry:left=2cm,right=2cm,top=2.5cm,bottom=2.5cm"]
+                 "-V CJKmonofontoptions:AutoFakeBold,AutoFakeSlant,FallBack='WenQuanYi Zen Hei Mono'"]
 
 [beamer]
 alias_name    = b
@@ -51,11 +52,12 @@ template      = ./latex-cjk.tex
 latex_engine  = xelatex
 other_options = ["-V colortheme:default",
                  "-V theme:default",
+                 "-V colorlinks",
                  "-V mainfont:'Times New Roman'",
                  "-V sansfont:Verdana",
                  "-V monofont:Monaco",
                  "-V xeCJK:CJKspace=true,CheckSingle=true,PlainEquation=true,PunctStyle=CCT",
-                 "-V ctex:UTF8,heading=true",
+                 "-V ctex:UTF8",
                  "-V CJKmainfont:SimSun",
                  "-V CJKmainfontoptions:BoldFont=SimHei,ItalicFont=KaiTi,AutoFakeSlant,FallBack='WenQuanYi Micro Hei'",
                  "-V CJKsansfont:SimHei",
@@ -69,8 +71,10 @@ doc_class     = article
 template      = ./eisvogel-v2.4.0.tex
 latex_engine  = xelatex
 other_options = ["-N",
-                 "--toc",
-                 "--listings",
+                 "-V titlepage",
+                 "--toc", "-V toc-own-page",
+                 "--listings", "-V listings-no-page-break",
+                 "-V colorlinks", "-V indent",
                  "-V mainfont:'Times New Roman'",
                  "-V sansfont:Verdana",
                  "-V monofont:Monaco",
@@ -81,5 +85,4 @@ other_options = ["-N",
                  "-V CJKsansfont:SimHei",
                  "-V CJKsansfontoptions:AutoFakeBold,AutoFakeSlant,FallBack='Microsoft YaHei'",
                  "-V CJKmonofont:'WenQuanYi Micro Hei Mono'",
-                 "-V CJKmonofontoptions:AutoFakeBold,AutoFakeSlant,FallBack='WenQuanYi Zen Hei Mono'",
-                 "-V geometry:left=2cm,right=2cm,top=2.5cm,bottom=2.5cm"]
+                 "-V CJKmonofontoptions:AutoFakeBold,AutoFakeSlant,FallBack='WenQuanYi Zen Hei Mono'"]
