enable listings page-break for eisvogel template

--- a/rst2arb.conf
+++ b/rst2arb.conf
@@ -73,7 +73,8 @@ latex_engine  = xelatex
 other_options = ["-N",
                  "-V titlepage",
                  "--toc", "-V toc-own-page",
-                 "--listings", "-V listings-no-page-break",
+                 "--listings",
+                 #"-V listings-no-page-break",
                  "-V colorlinks", "-V indent",
                  "-V mainfont:'Times New Roman'",
                  "-V sansfont:Verdana",
