set default caption-justification: centering for eisvogel template

--- a/rst2arb.conf
+++ b/rst2arb.conf
@@ -76,6 +76,7 @@ other_options = ["-N",
                  "--listings",
                  #"-V listings-no-page-break",
                  "-V colorlinks", "-V indent",
+                 "-V caption-justification:centering",
                  "-V mainfont:'Times New Roman'",
                  "-V sansfont:Verdana",
                  "-V monofont:Monaco",
